# badger-registry

./: .gitignore  .prettierrc.js  .solhint.json  .solhintignore  README.md  brownie-config.yaml  package.json  pyproject.toml  requirements.txt  tsconfig.json
contracts/: BadgerRegistry.sol  StuffFromYearn.sol
contracts/proxy/: AdminUpgradeabilityProxy.sol
contracts/utils/: Strings2Bytes32.sol  StringsUtils.sol
docs/: registry.md
scripts/: deploy.py
tests/: conftest.py  test_0_initialize.py  test_add_version_metadata.py  test_add_view.py  test_demote.py  test_get_all_production.py  test_keys.py  test_production_vaults.py  test_promote.py  test_purge.py  test_set_gov_users.py  test_update_metadata.py  test_versions.py
